welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:16: error: not found: value deposeBiscuit
  deposeBiscuit()
  ^DwarfCode:28: error: not found: value deplaceBiscuit
    	deplaceBiscuit()
        ^