welcome.lessons.welcome.summative.Moria.scala.code
def estSortie(): Boolean = {
  return getCouleurSol() == Color.GREEN
}

def deplaceRocher() {
  prendBiscuit()
  
  retourne()
  
  while (!estSurBiscuit()) {
    avance()
  }
  
  recule()
  
  deposeBiscuit()
  
  retourne()
}

def run() {
  retourne()
  
  while(!estSortie()) {
    avance()
    
    if (estSurBiscuit())
    	deplaceBiscuit()
  }
}